css/styles.css
/* Find a custom font */

body, html {
    margin: 0;
    padding: 0;
    font-size: 16px;
}

body > header {
    width: 100%;
}

footer > section {
    width: 65%;
    margin: 0 auto;
}

.internal-link-list-item {
    margin: 20px 0;
    font-size: 1.1em;
}

.internal-link-list-item:hover {
    text-decoration: underline;
}

.internal-link-list {
    padding: 0;
    list-style-type: none;
}

.nav-item-end {
    margin-left: auto;
}

.nav-item-top {
    list-style: none;
    padding: 10px 10px 20px;
}

.nav-item-top:hover {
    border-bottom: 3px solid darkblue;
}

.social-link {
    border-right: 1px solid black;
    padding: 0 20px;
}

.social-link:last-of-type {
    border-right: none;
}

#blank-space-top {
    height: 100px;
    background-color: #FAFAFA;
}

#button-live {
    align-self: flex-end;

    border-radius: 8px;
    padding: 10px 15px;
    background: linear-gradient(#FF0000, #FF0000, #9a0521, #9a0521);
    color: white;
}

#copyright {
    display: flex;
}

#copyright p {
    margin-right: 25px;
}

#header-top {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;

    margin: 0 auto;
    width: 65%;
}

#header-top-right {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
}

#internal-links {
    display: flex;
    flex-direction: row;
    /*justify-content: space-between;*/
}

#internal-links > section {
    margin-right: 150px;
}

#legal {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
}

#legal p {
    margin-right: 45px;
}

#nav-top {
    margin: 0 auto;
    width: 65%;

    font-size: 1.2em;
}

#nav-top-main {
    display: flex;
    flex-direction: row;
}

#nav-top-more {
    margin-left: 20px;
}

#social-links {
    display: flex;
    flex-flow: row wrap;

    border-bottom: 1px solid black;
    padding: 45px 0;
    font-size: 1.1em;
}

#title {
    align-self: flex-end;
}

#weather {
    justify-self: flex-end;
}

